Fix report code generation.